crates/strider/tests/snapshots/v2__aarch64be__calls__mutual_b.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ q1", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x2101dc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "23" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ q0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "31" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v32" [color="#888888", style=dashed];
  "v32" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ x1", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v33" [color="#888888", style=dashed];
  "v33" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="φ Val", shape=house, fillcolor="#163030"];
  "5" -> "34" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v39" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v39" [color="#888888", style=dashed];
  "v39" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "40" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "6" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "15" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "51" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
